--- a/app/src/main/res/layout/layout_my_course_search.xml
+++ b/app/src/main/res/layout/layout_my_course_search.xml
@@ -17,8 +17,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_search"
-                android:paddingLeft="@dimen/px10"
-                android:text="@string/name_of_course"
+                android:paddingLeft="@dimen/px15"
                 android:textColor="@color/search_gray"
                 android:textSize="@dimen/font_28px"
                 android:drawablePadding="@dimen/px10"
@@ -26,6 +25,7 @@
                 android:background="@drawable/common_edittext_bg"
                 android:paddingBottom="@dimen/px15"
                 android:paddingTop="@dimen/px15"
+                android:paddingRight="@dimen/px15"
                 android:layout_marginTop="@dimen/px15"
                 android:layout_marginBottom="@dimen/px15"
                 android:layout_marginLeft="@dimen/px30"
