--- a/app/src/main/res/layout/layout_teach_lesson_item.xml
+++ b/app/src/main/res/layout/layout_teach_lesson_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:background="@drawable/white_grey_selector"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
@@ -25,6 +26,8 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerInParent="true"
                         android:textColor="@color/font_white"
+                        android:paddingLeft="@dimen/px5"
+                        android:paddingRight="@dimen/px5"
                         android:textSize="@dimen/font_26px"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -46,6 +49,7 @@
             <RelativeLayout
                     android:layout_marginLeft="@dimen/px30"
                     android:layout_marginRight="@dimen/px30"
+                    android:layout_marginTop="@dimen/px10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -73,6 +77,7 @@
             <RelativeLayout
                     android:layout_marginLeft="@dimen/px30"
                     android:layout_marginRight="@dimen/px30"
+                    android:layout_marginTop="@dimen/px10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
