--- a/app/src/main/res/layout/layout_lesson_operation.xml
+++ b/app/src/main/res/layout/layout_lesson_operation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
     <TextView
             android:id="@+id/lesson_opera_enter"
@@ -16,60 +16,73 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-    <TextView
-            android:id="@+id/lesson_opera1"
-            android:textSize="@dimen/font_26px"
-            android:textColor="@color/common_text"
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_centerInParent="true"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
 
-    <View
-            android:id="@+id/divider1"
-            android:layout_width="@dimen/px1"
-            android:layout_height="@dimen/px30"
-            android:layout_toRightOf="@+id/lesson_opera1"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_centerInParent="true"
-            android:background="@color/common_text"/>
+        <TextView
+                android:id="@+id/lesson_opera1"
+                android:textSize="@dimen/font_26px"
+                android:textColor="@color/common_text"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="@dimen/px30"
+                android:text="123"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-    <TextView
-            android:id="@+id/lesson_opera2"
-            android:textSize="@dimen/font_26px"
-            android:textColor="@color/common_text"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/divider1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <View
+                android:id="@+id/divider1"
+                android:layout_width="@dimen/px1"
+                android:layout_height="@dimen/px30"
+                android:layout_toRightOf="@+id/lesson_opera1"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_centerInParent="true"
+                android:background="@color/common_text"/>
 
-    <View
-            android:id="@+id/divider2"
-            android:layout_width="@dimen/px1"
-            android:layout_height="@dimen/px30"
-            android:layout_toRightOf="@+id/lesson_opera2"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_centerInParent="true"
-            android:background="@color/common_text"/>
+        <TextView
+                android:id="@+id/lesson_opera2"
+                android:textSize="@dimen/font_26px"
+                android:textColor="@color/common_text"
+                android:layout_marginLeft="@dimen/px30"
+                android:text="123"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/divider1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-    <TextView
-            android:id="@+id/lesson_opera3"
-            android:textSize="@dimen/font_26px"
-            android:textColor="@color/common_text"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/divider2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <View
+                android:id="@+id/divider2"
+                android:layout_width="@dimen/px1"
+                android:layout_height="@dimen/px30"
+                android:layout_toRightOf="@+id/lesson_opera2"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_centerInParent="true"
+                android:background="@color/common_text"/>
 
-    <ImageView
-            android:id="@+id/lesson_more"
-            android:src="@drawable/ic_lesson_more"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_centerInParent="true"
-            android:layout_toRightOf="@+id/divider2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-</merge>
+        <TextView
+                android:id="@+id/lesson_opera3"
+                android:textSize="@dimen/font_26px"
+                android:textColor="@color/common_text"
+                android:layout_marginLeft="@dimen/px30"
+                android:text="123"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/divider2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <ImageView
+                android:id="@+id/lesson_more"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_lesson_more"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/divider2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+</RelativeLayout>
