--- a/app/src/main/res/layout/layout_lesson_person_view.xml
+++ b/app/src/main/res/layout/layout_lesson_person_view.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
     <FrameLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -53,8 +54,8 @@
     </FrameLayout>
 
     <FrameLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -100,8 +101,9 @@
     </FrameLayout>
 
     <FrameLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -145,4 +147,4 @@
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
-</merge>
+</RelativeLayout>
