--- a/app/src/main/res/layout/layout_lesson_status.xml
+++ b/app/src/main/res/layout/layout_lesson_status.xml
@@ -24,8 +24,8 @@
                 android:layout_height="wrap_content">
 
             <RelativeLayout
-                    android:layout_marginLeft="@dimen/px30"
-                    android:layout_marginRight="@dimen/px30"
+                    android:layout_marginLeft="@dimen/px15"
+                    android:layout_marginRight="@dimen/px15"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -49,6 +49,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                    android:layout_marginLeft="@dimen/px15"
+                    android:layout_marginRight="@dimen/px15"
+                    android:layout_marginTop="@dimen/px10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -103,7 +106,6 @@
             android:src="@drawable/ic_lesson_end"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="-5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 </RelativeLayout>
