--- a/app/src/main/res/layout/layout_home_live_item.xml
+++ b/app/src/main/res/layout/layout_home_live_item.xml
@@ -38,8 +38,9 @@
 
             <RelativeLayout
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="@dimen/px15"
-                    android:layout_width="wrap_content"
+                    android:background="@drawable/ic_lesson_shadow"
+                    android:paddingBottom="@dimen/px10"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                 <cn.xiaojs.xma.ui.widget.RoundedImageView
