--- a/app/src/main/res/layout/layout_live_header.xml
+++ b/app/src/main/res/layout/layout_live_header.xml
@@ -6,6 +6,7 @@
               android:layout_height="match_parent">
 
     <LinearLayout
+            android:id="@+id/lesson_all_1"
             android:orientation="horizontal"
             android:background="@drawable/white_grey_selector"
             android:layout_width="match_parent"
@@ -14,7 +15,7 @@
         <TextView
                 android:textSize="@dimen/font_30px"
                 android:textColor="@color/font_black"
-                android:text="我的班"
+                android:text="@string/course_of_teach"
                 android:layout_marginLeft="@dimen/px30"
                 android:layout_marginTop="@dimen/px30"
                 android:layout_marginBottom="@dimen/px30"
@@ -38,6 +39,48 @@
 
     <cn.xiaojs.xma.ui.widget.CanInScrollviewListView
             android:id="@+id/home_live_list"
+            android:divider="@color/main_bg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    <View
+            style="@style/DividerHorizontal"
+            android:layout_height="@dimen/px30"
+            android:background="@color/main_bg"/>
+
+    <LinearLayout
+            android:id="@+id/lesson_all_2"
+            android:orientation="horizontal"
+            android:background="@drawable/white_grey_selector"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:textSize="@dimen/font_30px"
+                android:textColor="@color/font_black"
+                android:text="@string/course_of_learn"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_marginTop="@dimen/px30"
+                android:layout_marginBottom="@dimen/px30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <TextView
+                android:textSize="@dimen/font_26px"
+                android:textColor="@color/font_blue"
+                android:layout_gravity="right|center_vertical"
+                android:text="@string/whole"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:layout_marginRight="@dimen/px30"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <View style="@style/DividerHorizontal2"/>
+
+    <cn.xiaojs.xma.ui.widget.CanInScrollviewListView
+            android:id="@+id/home_live_list2"
             android:divider="@color/main_bg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
