--- a/app/src/main/res/layout/layout_my_course_search.xml
+++ b/app/src/main/res/layout/layout_my_course_search.xml
@@ -18,7 +18,7 @@
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/ic_search"
                 android:paddingLeft="@dimen/px15"
-                android:textColor="@color/search_gray"
+                android:textColor="@color/font_black"
                 android:textSize="@dimen/font_28px"
                 android:drawablePadding="@dimen/px10"
                 android:gravity="center_vertical"
