--- a/app/src/main/res/layout/layout_classroom_contact.xml
+++ b/app/src/main/res/layout/layout_classroom_contact.xml
@@ -8,28 +8,45 @@
         android:focusable="true"
         android:focusableInTouchMode="true">
 
-    <EditText
-            android:id="@+id/search"
+    <LinearLayout
+            android:id="@+id/search_layout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/px58"
-            android:textColorHint="@color/font_dark_gray"
-            android:textColor="@color/font_dark_gray"
-            android:hint="搜索"
-            android:textSize="@dimen/font_26px"
-            android:background="#dcdcdc"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginTop="@dimen/px20"
             android:layout_marginBottom="@dimen/px20"
             android:layout_marginLeft="@dimen/px15"
             android:layout_marginRight="@dimen/px15"
-            android:drawableRight="@drawable/ic_search"
-            android:paddingLeft="@dimen/px15"
-            android:paddingRight="@dimen/px15"/>
+            android:background="#dcdcdc"
+            android:gravity="center_vertical">
+
+        <EditText
+                android:id="@+id/search_txt"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="@dimen/px58"
+                android:textColorHint="@color/font_dark_gray"
+                android:textColor="@color/font_dark_gray"
+                android:hint="@string/search"
+                android:background="@null"
+                android:textSize="@dimen/font_28px"
+                android:paddingLeft="@dimen/px15"
+                android:paddingRight="@dimen/px15"/>
+
+        <ImageView
+                android:id="@+id/search_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/px15"
+                android:src="@drawable/ic_search"/>
+
+    </LinearLayout>
 
     <ListView
             android:id="@+id/contact_book"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/search"
+            android:layout_below="@+id/search_layout"
             android:layout_above="@+id/action_line"
             android:layout_marginTop="@dimen/px8"
             android:listSelector="@android:color/transparent"
