--- a/app/src/main/res/layout/layout_classroom_setting.xml
+++ b/app/src/main/res/layout/layout_classroom_setting.xml
@@ -146,7 +146,7 @@
                     android:minWidth="@dimen/px260"/>
 
             <ToggleButton
-                    android:id="@+id/class_room_chat"
+                    android:id="@+id/class_room_talk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/toggle_btn_selector"
