教室，talk页面逻辑，点击头像跳转到个人聊天

--- a/app/src/main/res/layout/layout_classroom_talk.xml
+++ b/app/src/main/res/layout/layout_classroom_talk.xml
@@ -19,11 +19,10 @@
                 android:orientation="horizontal"
                 android:background="@color/classroom_main_gray">
 
-            <LinearLayout
+            <RelativeLayout
                     android:id="@+id/multi_talk_tab"
                     android:layout_weight="1.4"
                     android:layout_width="0dp"
-                    android:gravity="center_vertical"
                     android:layout_height="@dimen/px80"
                     android:paddingLeft="@dimen/px20"
                     android:paddingRight="@dimen/px20"
@@ -35,6 +34,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/classroom_discussion"
                         android:textColor="@color/font_white"
+                        android:layout_centerVertical="true"
                         android:textSize="@dimen/font_30px"/>
 
                 <ToggleButton
@@ -43,51 +43,71 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/px10"
                         android:background="@drawable/toggle_btn_selector"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         android:textOff=""
                         android:textOn=""/>
-            </LinearLayout>
+            </RelativeLayout>
 
-            <TextView
+            <LinearLayout
                     android:id="@+id/teaching_talk_tab"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/px80"
-                    android:text="教学组"
-                    android:gravity="center"
+                    android:orientation="horizontal"
                     android:layout_gravity="center_vertical"
-                    android:lines="1"
-                    android:ellipsize="end"
-                    android:textColor="@color/font_white"
-                    android:textSize="@dimen/font_30px"/>
+                    android:gravity="center_vertical">
 
-            <LinearLayout
-                    android:id="@+id/single_talk_tab"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:gravity="center_vertical"
-                    android:layout_height="@dimen/px80"
-                    android:paddingLeft="@dimen/px20">
+                <View
+                        android:id="@+id/divide_open_teaching"
+                        android:layout_width="@dimen/px1"
+                        android:layout_height="match_parent"
+                        android:background="@color/white"/>
 
                 <TextView
-                        android:id="@+id/single_talk_title"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="龚婷"
+                        android:id="@+id/teaching_talk_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/teaching_group"
+                        android:gravity="center"
                         android:lines="1"
                         android:ellipsize="end"
                         android:textColor="@color/font_white"
                         android:textSize="@dimen/font_30px"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/peer_talk_tab"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:gravity="center_vertical"
+                    android:layout_height="@dimen/px80">
+
+                <View
+                        android:id="@+id/divide_teaching_peer"
+                        android:layout_width="@dimen/px1"
+                        android:layout_height="match_parent"
+                        android:background="@color/white"/>
+
+                <TextView
+                        android:id="@+id/peer_talk_title"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:lines="1"
+                        android:ellipsize="end"
+                        android:gravity="center"
+                        android:textColor="@color/font_white"
+                        android:textSize="@dimen/font_30px"/>
 
                 <ImageView
-                        android:id="@+id/del_single_talk_btn"
+                        android:id="@+id/del_peer_talk_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingRight="@dimen/px20"
                         android:paddingLeft="@dimen/px20"
                         android:src="@drawable/ic_del_label"/>
             </LinearLayout>
-
 
         </LinearLayout>
 
