教室，白板注册

--- a/app/src/main/res/layout/layout_wb_management_item.xml
+++ b/app/src/main/res/layout/layout_wb_management_item.xml
@@ -30,7 +30,7 @@
     </LinearLayout>
 
     <ImageView
-            android:id="@+id/wb_remove"
+            android:id="@+id/wb_close"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
