--- a/app/src/main/res/layout/activity_material.xml
+++ b/app/src/main/res/layout/activity_material.xml
@@ -1,50 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/course_search_wrapper"
-            android:orientation="horizontal"
-            android:background="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <cn.xiaojs.xma.ui.widget.EditTextDel
-                android:id="@+id/my_course_search"
-                android:layout_width="match_parent"
-                android:drawableLeft="@drawable/ic_search"
-                android:paddingLeft="@dimen/px15"
-                android:paddingRight="@dimen/px15"
-                android:maxLines="1"
-                android:hint="搜索资料名/上传者"
-                android:textColor="@color/font_black"
-                android:textSize="@dimen/font_28px"
-                android:drawablePadding="@dimen/px10"
-                android:gravity="center_vertical"
-                android:background="@drawable/common_edittext_bg"
-                android:paddingBottom="@dimen/px15"
-                android:paddingTop="@dimen/px15"
-                android:layout_marginTop="@dimen/px15"
-                android:layout_marginBottom="@dimen/px15"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px20"
-                android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-    <View style="@style/DividerHorizontal"/>
-
-    <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/material_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:divider="@android:color/transparent"
-            android:listSelector="@android:color/transparent"
-            android:dividerHeight="@dimen/px1"
-            android:orientation="vertical"/>
-</LinearLayout>
+            android:orientation="vertical">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/px90"
+                        android:background="@color/white"
+                        android:orientation="horizontal">
+
+            <ImageView
+                    android:id="@+id/material_left_image"
+                    android:layout_gravity="left|center_vertical"
+                    android:paddingLeft="@dimen/px32"
+                    android:paddingRight="@dimen/px32"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/back_arrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/material_middle_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/font_34px"
+                    android:textStyle="bold"
+                    android:layout_centerInParent="true"
+                    android:textColor="@color/def"/>
+
+            <ImageView
+                    android:id="@+id/material_right_image"
+                    android:paddingLeft="@dimen/px32"
+                    android:paddingRight="@dimen/px32"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+        </RelativeLayout>
+
+
+        <View style="@style/DividerHorizontal"/>
+
+        <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/course_search_wrapper"
+                android:orientation="horizontal"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <cn.xiaojs.xma.ui.widget.EditTextDel
+                    android:id="@+id/my_course_search"
+                    android:layout_width="match_parent"
+                    android:drawableLeft="@drawable/ic_search"
+                    android:paddingLeft="@dimen/px15"
+                    android:paddingRight="@dimen/px15"
+                    android:maxLines="1"
+                    android:hint="搜索资料名/上传者"
+                    android:textColor="@color/font_black"
+                    android:textSize="@dimen/font_28px"
+                    android:drawablePadding="@dimen/px10"
+                    android:gravity="center_vertical"
+                    android:background="@drawable/common_edittext_bg"
+                    android:paddingBottom="@dimen/px15"
+                    android:paddingTop="@dimen/px15"
+                    android:layout_marginTop="@dimen/px15"
+                    android:layout_marginBottom="@dimen/px15"
+                    android:layout_marginLeft="@dimen/px30"
+                    android:layout_marginRight="@dimen/px20"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+        <View style="@style/DividerHorizontal"/>
+
+        <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/material_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="none"
+                android:divider="@android:color/transparent"
+                android:listSelector="@android:color/transparent"
+                android:dividerHeight="@dimen/px1"
+                android:orientation="vertical"/>
+    </LinearLayout>
+
+    <RelativeLayout
+            android:id="@+id/material_uploading_wrapper"
+            android:visibility="gone"
+            android:background="@color/translucent_30"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_centerInParent="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <TextView
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_30px"
+                    android:text="@string/up_loading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/material_up_load_name"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="@dimen/px50"
+                    android:textSize="@dimen/font_26px"
+                    android:text="@string/up_loading"
+                    android:layout_marginLeft="@dimen/px50"
+                    android:layout_marginRight="@dimen/px50"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <ProgressBar
+                    android:id="@+id/material_up_load_progress"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:minHeight="@dimen/px4"
+                    android:maxHeight="@dimen/px4"
+                    android:max="100"
+                    android:progress="0"
+                    android:layout_marginTop="@dimen/px25"
+                    android:progressDrawable="@drawable/progress_live"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/px50"
+                    android:layout_marginRight="@dimen/px50"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+        <ImageView
+                android:id="@+id/material_up_load_close"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="@dimen/px80"
+                android:src="@drawable/ic_close"
+                android:scaleType="fitXY"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </RelativeLayout>
+</FrameLayout>
