增加我的下载界面

--- a/app/src/main/res/layout/activity_material.xml
+++ b/app/src/main/res/layout/activity_material.xml
@@ -39,8 +39,8 @@
 
             <ImageView
                     android:id="@+id/material_right_image"
-                    android:paddingLeft="@dimen/px32"
-                    android:paddingRight="@dimen/px32"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
                     android:paddingTop="@dimen/px16"
                     android:paddingBottom="@dimen/px16"
                     android:layout_alignParentRight="true"
@@ -48,6 +48,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
+            <ImageView
+                    android:id="@+id/material_right_image2"
+                    android:layout_toLeftOf="@id/material_right_image"
+                    android:layout_centerInParent="true"
+                    android:paddingLeft="@dimen/px30"
+                    android:paddingRight="@dimen/px30"
+                    android:paddingTop="@dimen/px16"
+                    android:paddingBottom="@dimen/px16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
         </RelativeLayout>
 
 
