--- a/app/src/main/res/layout/layout_wb_management_item.xml
+++ b/app/src/main/res/layout/layout_wb_management_item.xml
@@ -26,7 +26,8 @@
                 android:id="@+id/wb_cover"
                 android:layout_margin="@dimen/px12"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"/>
     </LinearLayout>
 
     <ImageView
