--- a/app/src/main/res/layout/layout_classroom_setting_dialog.xml
+++ b/app/src/main/res/layout/layout_classroom_setting_dialog.xml
@@ -15,7 +15,6 @@
             android:text="@string/cr_open_camera"
             android:layout_marginTop="@dimen/px15"
             android:paddingTop="@dimen/px30"
-            android:paddingBottom="@dimen/px30"
             android:textSize="@dimen/font_32px"/>
 
     <LinearLayout
@@ -35,7 +34,7 @@
                 android:drawablePadding="@dimen/px20"
                 android:textColor="@color/font_gray"
                 android:textSize="@dimen/font_28px"
-                android:minWidth="@dimen/px260"/>
+                android:layout_marginRight="@dimen/px180"/>
 
         <ToggleButton
                 android:id="@+id/camera_switcher"
@@ -52,7 +51,6 @@
             android:textColor="@color/font_black"
             android:textSize="@dimen/font_32px"
             android:paddingTop="@dimen/px30"
-            android:paddingBottom="@dimen/px30"
             android:text="@string/cr_open_microphone"/>
 
     <LinearLayout
@@ -72,7 +70,7 @@
                 android:drawablePadding="@dimen/px20"
                 android:textColor="@color/font_gray"
                 android:textSize="@dimen/font_28px"
-                android:minWidth="@dimen/px260"/>
+                android:layout_marginRight="@dimen/px180"/>
 
         <ToggleButton
                 android:id="@+id/microphone_switcher"
